k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jtm
  labels:
    app.kubernetes.io/part-of: jtm-billing
